# 3d-model-viewer

./: .gitignore  CMakeLists.txt  HOW_TO_RUN.txt  Makefile  ProjectProposal  README.md  main.c  model.c  model.h  renderer.c  renderer.h  shading.c  shading.h
models/: README.md
shaders/: gouraud.frag  gouraud.vert
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  OBJLoader.cpp  OBJLoader.h  Shader.cpp  Shader.h  main.cpp
